--- a/site/layouts/resume/single.html
+++ b/site/layouts/resume/single.html
@@ -33,7 +33,7 @@
       <p>
         Do you like keywords ? I have project experience with the following tools and technologies :
       </p>
-      <p>Git, Bash, HTML, CSS, Sass, JavaScript (including ES6+), React, Redux, Vue, Jest, npm, Node, Webpack, Rollup, Gulp, Babel, ESlint, Lodash, JQuery, Bootstrap, Agile methodologies.</p>
+      <p>Git, Bash, HTML, CSS, Sass, styled-components, JavaScript (including ES6+), React, Redux, Vue, Jest, Enzyme, npm, Node, Webpack, Rollup, Gulp, Babel, ESlint, Lodash, JQuery, Bootstrap, Agile methodologies, ...</p>
 
       <hr>
 
@@ -41,13 +41,28 @@
       <ul class="work-xp">
         <li>
           <div class="meta">
+            <div class="org"><a href="https://www.keytradebank.be/">Keytrade Bank</a></div>
+            <div class="year">Feb 2019 - Now</div>
+          </div>
+          <div class="description">
+            I joined the Keytrade team to help build their <b>Design System</b>, serving multiple React-based projects developed both internally and externally. My responsibilities include :
+            <ul>
+              <li>Together with another developer more focused on the CSS, develop and deploy components to our internal npm repository.</li>
+              <li>Ensure code quality, with the notable use of Jest + Enzyme for unit tests, linting tools and systematic peer review.</li>
+              <li>Maintain the documentation of components using Storybook.</li>
+              <li>Help drive adoption of the shared components with good communication, organisation of workshops, smart scoping and versioning of packages, ...</li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div class="meta">
             <div class="org"><a href="https://www.isabelgroup.eu/en/">Isabel Group</a></div>
-            <div class="year">Jan 2018 - now</div>
+            <div class="year">Jan 2018 - Feb 2019</div>
           </div>
           <div class="description">
             I joined Isabel Group as a <b>front-end developer</b> and <b>UI specialist</b>. Isabel Group is Belgium's largest fintech, providing banking
             services like Isabel 6, Zoomit and CodaBox to companies of all sizes. Part of a small team reporting
-            directly to the CTO, I work on a variety of projects, including :
+            directly to the CTO, I worked on a variety of projects, including :
             <ul>
               <li>I created and maintained a design system to share UI components across multiple projects, based on Vue, Storybook and npm packages.</li>
               <li>I launched and lead a UI 'Community of Practice', gathering designers and developers from all teams
@@ -61,8 +76,7 @@
             <div class="year">Jan 2016 - Dec 2017</div>
           </div>
           <div class="description">
-            I was working as a <b>front-end developer</b> at Emakina, part of one of the top three independent
-            full-service digital agency groups in Europe. I worked on a range of different technologies and frameworks
+            I joined Emakina as a <b>front-end developer</b>, where I worked on a range of different technologies and frameworks
             for some great brands like Ouibus, D'Ieteren, Deutsche Bank, Federale Assurance, ... Notable projects I was
             involved with include :
             <ul>
@@ -81,19 +95,7 @@
           <div class="description">
             I was <b>policy officer</b> and <b>webmaster</b> for OpenForum Europe (OFE), a not-for-profit industry
             organisation aiming to
-            accelerate and broaden the use of Open Source Software among businesses, consumers and governments. In
-            2013, I joined the board of directors as <b>Director of European policy</b>.
-            <ul>
-              <li>I lead and helped to grow the team in the Brussels office. I started as the only person working
-                there, and by 2016 the team had grown to 4 people on contract, plus an intern.</li>
-              <li>I designed and developed a <a href="http://www.openforumeurope.org/">new website</a>
-                for OFE
-                from scratch using a custom WordPress theme, including the migration of content from the
-                <a href="http://archive.openforumeurope.org/">old website</a> running on Plone.</li>
-              <li>Starting from 2015, I created and maintained a <a href="http://us10.campaign-archive2.com/home/?u=92e540ce342922d890e7dc17a&id=cc91892046"
-                 >monthly
-                  newsletter</a> in support of OFE's new online communication strategy.</li>
-            </ul>
+            accelerate and broaden the use of Open Source Software among businesses, consumers and governments.
           </div>
         </li>
       </ul>
