--- a/site/layouts/resume/single.html
+++ b/site/layouts/resume/single.html
@@ -25,7 +25,7 @@
         hypothesis and iterate rapidly, as well as design systems to build consistent UI at scale.</p>
 
       <p>I see open communication, empathy and inclusivity as the essential components of a well-functioning team. For
-        more information about myself, head over to the <a href="{{ .Site.BaseURL }}about">about</a> page.</p>
+        more information about myself, I invite you to have a look at my about page : <a href="{{ .Site.BaseURL }}about">{{ .Site.BaseURL }}about</a>.</p>
 
       <hr>
 
