--- a/site/layouts/resume-fr/single.html
+++ b/site/layouts/resume-fr/single.html
@@ -9,8 +9,6 @@
       <p class="notice-web">🖨️ Cette page est optimisée pour l'impression, n'hésitez pas à l'imprimer ou à l'exporter au format PDF.</p>
       <p class="print-only">Ce document est également disponible comme page web à l'adresse <a href="{{ .Site.BaseURL }}resume-fr">{{ .Site.BaseURL }}resume-fr</a></p>
 
-      <img src="{{ .Site.BaseURL }}images/mael.jpg" alt="Maël Brunet" class="me print-only">
-
       <p class="print-only">📧 maelbrunet<span class="highlight">[at]</span>gmail<span class="highlight">[point]</span>com</p>
 
       <h2>À propos</h2>
@@ -34,8 +32,23 @@
       <ul class="work-xp">
         <li>
           <div class="meta">
+            <div class="org"><a href="https://www.keytradebank.be/">Keytrade Bank</a></div>
+            <div class="year">Feb 2019 - Aujourd'hui</div>
+          </div>
+          <div class="description">
+            J'ai rejoint Keytrade pour professionaliser et maintenir leur <b>Design System</b> naissant, utilisé sur plusieurs projets développés en React. Mes responsabilités incluent notamment :
+            <ul>
+              <li>En coopération avec les designers, construire et déployer les composants UI sur un répertoire npm interne.</li>
+              <li>Assurer la qualité et la maintenabilité du code, avec des outils tels que Jest + Enzyme pour les tests unitaires, ESLint pour le linting et des revues de code.</li>
+              <li>Maintenir la documentation des composants UI à l'aide de Storybook.</li>
+              <li>Assurer le suivi et encourager l'adoption du design system sur tous les nouveaux projets, à l'aide d'un canal de messagerie dédié, de workshops réguliers, etc</li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div class="meta">
             <div class="org"><a href="https://www.isabelgroup.eu/en/">Isabel Group</a></div>
-            <div class="year">Jan 2018 - aujourd'hui</div>
+            <div class="year">Jan 2018 - Jan 2019</div>
           </div>
           <div class="description">
             J'ai rejoint Isabel Group en tant que <b>développeur front-end</b> et <b>spécialiste UI</b>. Isabel Group est la plus grande fintech de Belgique, fournissant des services bancaires des services tels que Isabel 6, Zoomit et CodaBox aux entreprises de toutes tailles. Intégré à une petite équipe rapportant directement au CTO, je travaille sur divers projets, notamment:
